# druk-lang

./: .clang-format  .clang-tidy  .dockerignore  .editorconfig  .gitignore  CHANGELOG.md  CMakeLists.txt  Dockerfile.web  LICENSE  LLVM_JIT_GUIDE.md  OPTIMIZATIONS.md  OPTIMIZATION_GUIDE.md  README.md  build.ps1  build_debug.ps1  build_log.txt  debug_fib.druk  debug_fib_base.druk  debug_fib_trace.druk  debug_fib_trace_full.druk  docker-compose.yml  full_test_results.txt  kill_compiler.ps1  output.txt  output_dz.txt  run_jit_benchmark.ps1  setup.ps1  test.druk  test_countdown_add.druk  test_countdown_mul.druk  test_countdown_param_mul.druk  test_countdown_param_mul_3.druk  test_examples.ps1  test_factorial_debug.druk  test_if.druk  test_ifelse.druk  test_logical.druk  test_return_param.druk  test_simple.druk  test_simple_mult.druk
.github/: copilot-instructions.md
.github/workflows/: ci.yml  release-build.yml  release-please.yml
_codeql_build_dir/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  druk
_codeql_build_dir/benchmarks/: CTestTestfile.cmake  Makefile  cmake_install.cmake  druk_bench  sum_bench
_codeql_build_dir/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake  druk_tests  druk_tests[1]_include.cmake  druk_tests[1]_tests.cmake
actions-runner/: .credentials  .credentials_rsaparams  .runner
benchmarks/: CMakeLists.txt  compare.druk  compare_bench.cpp  compare_jit_bench.cpp  compare_microbench.cpp  compare_python.py  lexer_bench.cpp  lexer_perf_bench.cpp  loop_bench.cpp  loop_bench.druk  loop_bench.py  main_bench.cpp  sum_bench.cpp
build-installer/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  druk-installer.sln  druk-installer.vcxproj  druk-installer.vcxproj.filters
build-wasm/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  druk-stub.js  druk-stub.wasm  druk.js  druk.wasm
build-wasm/benchmarks/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build-wasm/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake  druk_tests[1]_include.cmake
docs/: documentation_fr.md  dzongkha_reference.md  future_features.md
docs/developer/: coding_style.md
examples/: 01_hello.druk  02_arithmetic.druk  03_control_flow.druk  03_logic.druk  04_loop.druk  04_loops.druk  05_factorial.druk  05_functions.druk  06_recursion.druk  06_scope.druk  07_fibonacci.druk  07_lambdas.druk  08_arrays.druk  08_pattern_matching.druk  09_arrays.druk  09_structs.druk  10_demo.druk  10_simple_array.druk  11_simple_struct.druk  12_return.druk  13_assignment.druk  14_builtins.druk  15_builtins_more.druk  16_big_program.druk  17_game_logic.druk  18_args_input.druk  fibonacci.druk  hello.druk
scripts/: count_loc.py  filter_errors.py  remove_comments.py
src/: druk_c_api.cpp  druk_stub.cpp  main.cpp
src/codegen/: chunk.cpp  gen_collections.cpp  gen_expr.cpp  gen_stmt.cpp  generator.cpp  jit_runtime.cpp  llvm_backend.cpp  llvm_jit.cpp
src/common/: allocator.cpp  error.cpp
src/gc/: gc_array.cpp  gc_heap_alloc.cpp  gc_heap_collect.cpp  gc_roots.cpp  gc_string.cpp  gc_struct.cpp
src/interpreter/: interpreter.cpp
src/ir/: ir_basic_block.cpp  ir_builder.cpp  ir_builder_array.cpp  ir_function.cpp  ir_instruction.cpp  ir_instruction_arrays.cpp  ir_instruction_ops.cpp  (+5 more)
tests/: CMakeLists.txt  allocator_test.cpp  interner_test.cpp  lexer_test.cpp  token_test.cpp
tests/codegen/: chunk_test.cpp  generator_test.cpp
tests/e2e/: test_runner.py
tests/e2e/cases/: 01_arithmetic.druk  01_arithmetic.out  02_variables.druk  02_variables.out  03_logic.druk  03_logic.out  04_if.druk  04_if.out  05_loops.druk  05_loops.out  06_functions.druk  06_functions.out  07_arrays.druk  07_arrays.out  08_strings.druk  08_strings.out  09_null_safety.druk  09_null_safety.out  10_lambdas.druk  10_lambdas.out  11_mutual_recursion.druk  11_mutual_recursion.out  12_higher_order.druk  12_higher_order.out  13_nested_control.druk  13_nested_control.out  14_pattern_matching.druk  20_err_undeclared.druk  20_err_undeclared.err  21_err_type_mismatch.druk  21_err_type_mismatch.err  22_err_arg_count.druk  22_err_arg_count.err  23_err_syntax_if.druk  23_err_syntax_if.err  24_err_broken_expr.druk  24_err_broken_expr.err  30_tic_tac_toe.druk  30_tic_tac_toe.out  31_arith_complex.druk  (+64 more)
tests/helpers/: test_helpers.h
tests/integration/: test_pipeline.cpp
tests/parser/: parser_test.cpp
tests/semantic/: analyze_test.cpp  table_test.cpp
tests/unit/lexer/: lexer_test.cpp  test_lexer_errors.cpp  test_lexer_keywords.cpp  test_lexer_numbers.cpp  test_lexer_strings.cpp  test_lexer_tokens.cpp
tests/unit/parser/: parser_test.cpp  test_match_lambda.cpp  test_parser_collections.cpp  test_parser_control_flow.cpp  test_parser_errors.cpp  test_parser_expressions.cpp  test_parser_functions.cpp  test_parser_statements.cpp
tests/unit/runtime/: test_value_system.cpp
tests/unit/semantic/: test_scope_resolution.cpp  test_semantic_errors.cpp  test_type_checker.cpp
tests/unit/util/: error_formatter_test.cpp
tests/vm/: vm_test.cpp
tools/installer/: CMakeLists.txt  installer.rc  package.ps1  resource.h
tools/installer/include/: installer.hpp  logic_engine.hpp  ui_theme.hpp  ui_window.hpp  ui_wizard.hpp  util_logger.hpp
tools/installer/src/: logic_engine.cpp  logic_rollback.cpp  logic_system.cpp  main.cpp  ui_theme.cpp  ui_window.cpp  ui_wizard.cpp
tools/installer/staging/include/druk/codegen/core/: abi_handler.h  obj.h
tools/installer/staging/include/druk/gc/: gc_config.h
tools/installer/staging/include/druk/gc/types/: gc_struct.h
tools/installer/staging/include/druk/ir/: ir_instruction_control.h  ir_instruction_ops.h  ir_opcode.h  ir_type.h
tools/installer/staging/include/druk/parser/ast/: ast.hpp  expr.hpp  kinds.hpp  type.hpp
tools/installer/staging/include/druk/parser/core/: parser.hpp
tools/installer/staging/include/druk/semantic/: symbol_table.hpp
tools/installer/staging/include/druk/util/: interner.hpp  update_checker.hpp
web/: app.js  index.html  package-lock.json  package.json  styles.css  vite.config.js
(+296 files in other folders)
